[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-drift-analyzer"
version = "0.5.0"
description = "Detect, explain, and solve context drift in LLM conversations across sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Suman", email = "suman@example.com" },
]
keywords = [
    "llm",
    "context-drift",
    "drift-detection",
    "chatbot",
    "monitoring",
    "embeddings",
    "sentence-transformers",
    "openai",
    "anthropic",
    "banking-chatbot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.0.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = [
    "sentence-transformers>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
context-drift-analyzer = "context_drift_analyzer.cli.main:main"

[project.urls]
Homepage = "https://github.com/Suman-Git-DS/ContextDriftAnalyzer"
Documentation = "https://github.com/Suman-Git-DS/ContextDriftAnalyzer#readme"
Repository = "https://github.com/Suman-Git-DS/ContextDriftAnalyzer"
Issues = "https://github.com/Suman-Git-DS/ContextDriftAnalyzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/context_drift_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/context_drift_analyzer", "README.md", "LICENSE"]
